
2013-04-10  Jaehwan Kim

        * Add the API elm_scroller_single_direction_set/get.
        This sets how the content is scrolled.

2013-04-10  Jaehwan Kim

        * Fix the calculation double type number.
        Round off to the nearest whole number.

2013-04-15  Jaehwan Kim

        * Add the feature for key events.

2013-04-16  Jaehwan Kim

        * Fix the policy is not changed when the theme is changed.
        The "reload" signal from edc is necessary always.

2013-04-16  WooHyun Jung

        * When entry is disabled, scrolling is also disabled.

2013-04-17  ChunEon Park (Hermet)

        * Don't try to pop the naviframe item multiple times.

2013-04-18  Shinwoo Kim

        * Add elm_access_action(), elm_access_action_cb_set()

2013-04-22  Shinwoo Kim

        * Make access object unfocusable when Aaccessibility is disabled.

2013-04-23  ChunEon Park (Hermet)

        * Added elm_object_domain_part_text_translatable_set(),
        elm_object_item_domain_part_text_translatable_set().

2013-04-23  Jaehwan Kim

        * Fix the scrolled entry in scroller is located wrong position when the
        cursor is changed. It is a scroller in scroller. In this case, it moved
        twice.

2013-04-23  ChunEon Park (Hermet)

        * Support language change for widget items (Ctxpopup, Hoversel,
        Naviframe, Diskselector, List, Menu, Segment_Control, Toolbar, Popup,
        MultibuttonEntry)

2013-04-23  ChunEon Park (Hermet)

        * Support language,changed callback (Fileselector_Button,
        Fileselector Entry, Spinner

2013-04-25  ChunEon Park (Hermet)

        * Fix null pointer access on naviframe item deletion.

2013-04-29  ChunEon Park (Hermet)

        * Fix toolbar item clipped problem on reordering toolbar item.

2013-04-30  Jaehwan Kim

        * Add the config elm_scroll_smooth_start_enable.
        There's no tick when scroller starts scroll if it's set.